force-app/main/default/objects/SBQQ__Quote__c/fields/NF_Accounting_Contact__c.field-meta.xml
<CustomField>
    <fullName>NF_Accounting_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ES-1083</description>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Accounting Contact)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>