force-app/main/default/objects/SBQQ__Quote__c/fields/NF_Amended_Contract__c.field-meta.xml
<CustomField>
    <fullName>NF_Amended_Contract__c</fullName>
    <formula>SBQQ__Opportunity2__r.SBQQ__AmendedContract__c</formula>
    <label>Amended Contract</label>
    <type>Text</type>
</CustomField>