force-app/main/default/objects/SBQQ__Quote__c/fields/NF_Auto_Renewal_Escalation__c.field-meta.xml
<CustomField>
    <fullName>NF_Auto_Renewal_Escalation__c</fullName>
    <label>Auto-Renewal Escalation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>No Auto-Renewal</fullName>
            </value>
            <value>
                <fullName>No Escalation Auto-Renewal</fullName>
                <isActive>false</isActive>
                <label>No Escalation Auto-Renewal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>