force-app/main/default/objects/SBQQ__Quote__c/fields/NF_Debook_Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>NF_Debook_Auto_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gets set to TRUE if an amendment quote is created for a full debook of an auto-renewed contract.</description>
    <label>Debook Auto-Renew</label>
    <type>Checkbox</type>
</CustomField>