force-app/main/default/objects/SBQQ__Quote__c/fields/NF_Escalation__c.field-meta.xml
<CustomField>
    <fullName>NF_Escalation__c</fullName>
    <label>Escalation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>