force-app/main/default/objects/SBQQ__Quote__c/fields/NF_Price_Recalculation__c.field-meta.xml
<CustomField>
    <fullName>NF_Price_Recalculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Recalculation</label>
    <type>Checkbox</type>
</CustomField>