force-app/main/default/objects/SBQQ__Quote__c/fields/NF_Quote_Line_Groups_Updated__c.field-meta.xml
<CustomField>
    <fullName>NF_Quote_Line_Groups_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Line Groups Updated</label>
    <type>Checkbox</type>
</CustomField>