force-app/main/default/objects/SBQQ__Quote__c/fields/NF_Renewed_Contract__c.field-meta.xml
<CustomField>
    <fullName>NF_Renewed_Contract__c</fullName>
    <formula>SBQQ__Opportunity2__r.SBQQ__RenewedContract__c</formula>
    <label>Renewed Contract</label>
    <type>Text</type>
</CustomField>